[Contents] Portfolio contents v1 added.

--- a/my-website/blog/authors.yml
+++ b/my-website/blog/authors.yml
@@ -21,3 +21,10 @@ slorber:
     linkedin: sebastienlorber
     github: slorber
     newsletter: https://thisweekinreact.com
+
+ash3327:
+  name: Ash
+  title: Machine Learning Engineer
+  url: https://github.com/ash3327
+  image_url: https://github.com/ash3327.png
+  page: true
